--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ui.DiaryActivity"></activity>
-        <activity android:name=".ui.AlarmActivity" />
-        <activity android:name=".ui.MainActivity">
+        <activity android:name=".activity.NewNoteActivity" />
+        <activity android:name=".activity.DiaryActivity"/>
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
